statum-macros/tests/ui/invalid_transition_no_methods.rs
use statum::{machine, state, transition};

#[state]
enum State {
    A,
    B,
}

#[machine]
struct Machine<State> {}

#[transition]
impl Machine<A> {}
